--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <script src="/bundle.js"></script>
-  <meta charset="UTF-8">
   <title>Order Phoenix</title>
 </head>
 <body>
-<p>Hello World!</p>
+<div id="mount"></div>
 </body>
 </html>
