Update folder structure, webpack config, and package.json

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="/bundle.js"></script>
   <title>Order Phoenix</title>
 </head>
 <body>
 <div id="main"></div>
+  <script src="/bundles/bundle.js"></script>
 </body>
 </html>
