Add favicon to the page

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Codr</title>
+  <link rel='icon' href="favicon.ico"/>
   <link href="https://fonts.googleapis.com/css?family=Pacifico|Raleway:400,500,600,800" rel="stylesheet"></head>
 <body id="body">
   <div id="main"></div>
